Vector3　を Vector3.cs に移動 Vector　N次元ベクトル 追加

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@
 /INumberTest/obj/INumberTest.csproj.nuget.g.targets
 /INumberTest/obj/project.assets.json
 /INumberTest/obj/project.nuget.cache
+/.vs/INumberTest/v17/TestStore/0
